// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlightsList component FlightsList component snapshot 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
    style="position: relative;"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MTableToolbar-root-33 MuiToolbar-gutters"
    >
      <div
        class="MTableToolbar-title-37"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6"
          style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
        >
          Flights
        </h6>
      </div>
      <div
        class="MTableToolbar-spacer-35"
      />
      <div
        class="MuiFormControl-root MuiTextField-root MTableToolbar-searchField-38"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart MuiInputBase-adornedEnd"
        >
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionStart"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
              title="Search"
            >
              search
            </span>
          </div>
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd"
            placeholder="Search"
            type="text"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span
                  aria-hidden="true"
                  class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
                >
                  clear
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MTableToolbar-actions-36"
      >
        <div>
          <div>
            <span />
          </div>
        </div>
      </div>
    </div>
    <div
      class="Component-horizontalScrollContainer-150"
      style="overflow-x: auto; position: relative;"
    >
      <div>
        <div
          style="overflow-y: auto;"
        >
          <div>
            <table
              class="MuiTable-root"
              style="table-layout: auto;"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-153 MuiTableCell-alignLeft"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-active"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-roledescription="Draggable item. Press space bar to lift"
                        data-react-beautiful-dnd-drag-handle="0"
                        data-react-beautiful-dnd-draggable="0"
                        draggable="false"
                        tabindex="0"
                      >
                        Departure
                      </div>
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                      >
                        arrow_downward
                      </span>
                    </span>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-153 MuiTableCell-alignLeft"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-roledescription="Draggable item. Press space bar to lift"
                        data-react-beautiful-dnd-drag-handle="0"
                        data-react-beautiful-dnd-draggable="0"
                        draggable="false"
                        tabindex="0"
                      >
                        Departure time
                      </div>
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                      >
                        arrow_downward
                      </span>
                    </span>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-153 MuiTableCell-alignLeft"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-roledescription="Draggable item. Press space bar to lift"
                        data-react-beautiful-dnd-drag-handle="0"
                        data-react-beautiful-dnd-draggable="0"
                        draggable="false"
                        tabindex="0"
                      >
                        Arrival
                      </div>
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                      >
                        arrow_downward
                      </span>
                    </span>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-153 MuiTableCell-alignLeft"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-roledescription="Draggable item. Press space bar to lift"
                        data-react-beautiful-dnd-drag-handle="0"
                        data-react-beautiful-dnd-draggable="0"
                        draggable="false"
                        tabindex="0"
                      >
                        Arrival time
                      </div>
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                      >
                        arrow_downward
                      </span>
                    </span>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-153 MuiTableCell-alignLeft"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-roledescription="Draggable item. Press space bar to lift"
                        data-react-beautiful-dnd-drag-handle="0"
                        data-react-beautiful-dnd-draggable="0"
                        draggable="false"
                        tabindex="0"
                      >
                        Type
                      </div>
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                      >
                        arrow_downward
                      </span>
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                  style="height: 10px;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart"
                      >
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionStart"
                        >
                          <span
                            aria-hidden="true"
                            class="material-icons MuiIcon-root"
                            title="Filter"
                          >
                            filter_list
                          </span>
                        </div>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                          placeholder=""
                          type="search"
                          value=""
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                      format="MMMM do"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          readonly=""
                          type="text"
                          value=""
                        />
                      </div>
                      
                    </div>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart"
                      >
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionStart"
                        >
                          <span
                            aria-hidden="true"
                            class="material-icons MuiIcon-root"
                            title="Filter"
                          >
                            filter_list
                          </span>
                        </div>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                          placeholder=""
                          type="search"
                          value=""
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                      format="MMMM do"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          readonly=""
                          type="text"
                          value=""
                        />
                      </div>
                      
                    </div>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="MuiFormControl-root"
                      style="width: 100%;"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                        data-shrink="false"
                        for="select-multiple-checkbox"
                      />
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                        style="margin-top: 0px;"
                      >
                        <div
                          aria-haspopup="listbox"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                          role="button"
                          tabindex="0"
                        >
                          <span>
                            ​
                          </span>
                        </div>
                        <input
                          id="select-multiple-checkbox"
                          type="hidden"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSelect-icon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                      </div>
                    </div>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  style="height: 245px;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                    colspan="5"
                    style="padding-top: 0px; padding-bottom: 0px; text-align: center;"
                  >
                    No records to display
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <table
      class="MuiTable-root"
    >
      <tfoot
        class="MuiTableFooter-root"
        style="display: grid;"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-footer"
        >
          <td
            class="MuiTableCell-root MuiTableCell-footer MuiTablePagination-root Component-paginationRoot-1"
            colspan="3"
            icons="[object Object]"
            style="float: right; overflow-x: auto;"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiTablePagination-toolbar Component-paginationToolbar-2 MuiToolbar-gutters"
            >
              <div
                class="MuiTablePagination-spacer"
              />
              <p
                class="MuiTypography-root MuiTablePagination-caption Component-paginationCaption-3 MuiTypography-body2 MuiTypography-colorInherit"
              >
                Rows per page:
              </p>
              <div
                class="MuiInputBase-root MuiTablePagination-input MuiTablePagination-selectRoot Component-paginationSelectRoot-4"
              >
                <div
                  aria-haspopup="listbox"
                  aria-label="Rows per page:"
                  class="MuiSelect-root MuiSelect-select MuiTablePagination-select MuiSelect-selectMenu MuiInputBase-input"
                  role="button"
                  tabindex="0"
                >
                  <div
                    style="padding: 0px 5px;"
                  >
                    5 rows 
                  </div>
                </div>
                <input
                  type="hidden"
                  value="5"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiTablePagination-selectIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
              <p
                class="MuiTypography-root MuiTablePagination-caption Component-paginationCaption-3 MuiTypography-body2 MuiTypography-colorInherit"
              >
                0-0 of 0
              </p>
              <div
                class="MTablePaginationInner-root-251"
              >
                <span
                  class=""
                  title="First Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root"
                      >
                        first_page
                      </span>
                    </span>
                  </button>
                </span>
                <span
                  class=""
                  title="Previous Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root"
                      >
                        chevron_left
                      </span>
                    </span>
                  </button>
                </span>
                <span
                  class="MuiTypography-root MuiTypography-caption"
                  style="flex: 1; text-align: center; align-self: center; flex-basis: inherit;"
                >
                  1-0 of 0
                </span>
                <span
                  class=""
                  title="Next Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root"
                      >
                        chevron_right
                      </span>
                    </span>
                  </button>
                </span>
                <span
                  class=""
                  title="Last Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root"
                      >
                        last_page
                      </span>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
    <div
      style="position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; z-index: 11;"
    >
      <div
        style="display: table; width: 100%; height: 100%; background-color: rgba(255, 255, 255, 0.7);"
      >
        <div
          style="display: table-cell; width: 100%; height: 100%; vertical-align: middle; text-align: center;"
        >
          <div
            class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
            role="progressbar"
            style="width: 40px; height: 40px;"
          >
            <svg
              class="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FlightsList component FlightsList component snapshot 2 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
    style="position: relative;"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MTableToolbar-root-296 MuiToolbar-gutters"
    >
      <div
        class="MTableToolbar-title-300"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6"
          style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
        >
          Flights
        </h6>
      </div>
      <div
        class="MTableToolbar-spacer-298"
      />
      <div
        class="MuiFormControl-root MuiTextField-root MTableToolbar-searchField-301"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart MuiInputBase-adornedEnd"
        >
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionStart"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
              title="Search"
            >
              search
            </span>
          </div>
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd"
            placeholder="Search"
            type="text"
            value=""
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span
                  aria-hidden="true"
                  class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
                >
                  clear
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="MTableToolbar-actions-299"
      >
        <div>
          <div>
            <span />
          </div>
        </div>
      </div>
    </div>
    <div
      class="Component-horizontalScrollContainer-413"
      style="overflow-x: auto; position: relative;"
    >
      <div>
        <div
          style="overflow-y: auto;"
        >
          <div>
            <table
              class="MuiTable-root"
              style="table-layout: auto;"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-416 MuiTableCell-alignLeft"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-active"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-roledescription="Draggable item. Press space bar to lift"
                        data-react-beautiful-dnd-drag-handle="1"
                        data-react-beautiful-dnd-draggable="1"
                        draggable="false"
                        tabindex="0"
                      >
                        Departure
                      </div>
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                      >
                        arrow_downward
                      </span>
                    </span>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-416 MuiTableCell-alignLeft"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-roledescription="Draggable item. Press space bar to lift"
                        data-react-beautiful-dnd-drag-handle="1"
                        data-react-beautiful-dnd-draggable="1"
                        draggable="false"
                        tabindex="0"
                      >
                        Departure time
                      </div>
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                      >
                        arrow_downward
                      </span>
                    </span>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-416 MuiTableCell-alignLeft"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-roledescription="Draggable item. Press space bar to lift"
                        data-react-beautiful-dnd-drag-handle="1"
                        data-react-beautiful-dnd-draggable="1"
                        draggable="false"
                        tabindex="0"
                      >
                        Arrival
                      </div>
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                      >
                        arrow_downward
                      </span>
                    </span>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-416 MuiTableCell-alignLeft"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-roledescription="Draggable item. Press space bar to lift"
                        data-react-beautiful-dnd-drag-handle="1"
                        data-react-beautiful-dnd-draggable="1"
                        draggable="false"
                        tabindex="0"
                      >
                        Arrival time
                      </div>
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                      >
                        arrow_downward
                      </span>
                    </span>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MTableHeader-header-416 MuiTableCell-alignLeft"
                    scope="col"
                    style="box-sizing: border-box;"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiTableSortLabel-root"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        aria-roledescription="Draggable item. Press space bar to lift"
                        data-react-beautiful-dnd-drag-handle="1"
                        data-react-beautiful-dnd-draggable="1"
                        draggable="false"
                        tabindex="0"
                      >
                        Type
                      </div>
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionDesc"
                      >
                        arrow_downward
                      </span>
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                  style="height: 10px;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart"
                      >
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionStart"
                        >
                          <span
                            aria-hidden="true"
                            class="material-icons MuiIcon-root"
                            title="Filter"
                          >
                            filter_list
                          </span>
                        </div>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                          placeholder=""
                          type="search"
                          value=""
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                      format="MMMM do"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          readonly=""
                          type="text"
                          value=""
                        />
                      </div>
                      
                    </div>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart"
                      >
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionStart"
                        >
                          <span
                            aria-hidden="true"
                            class="material-icons MuiIcon-root"
                            title="Filter"
                          >
                            filter_list
                          </span>
                        </div>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputTypeSearch MuiInput-inputTypeSearch"
                          placeholder=""
                          type="search"
                          value=""
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                      format="MMMM do"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          readonly=""
                          type="text"
                          value=""
                        />
                      </div>
                      
                    </div>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="MuiFormControl-root"
                      style="width: 100%;"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                        data-shrink="false"
                        for="select-multiple-checkbox"
                      />
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                        style="margin-top: 0px;"
                      >
                        <div
                          aria-haspopup="listbox"
                          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                          role="button"
                          tabindex="0"
                        >
                          <span>
                            ​
                          </span>
                        </div>
                        <input
                          id="select-multiple-checkbox"
                          type="hidden"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSelect-icon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                      </div>
                    </div>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="0"
                  level="0"
                  path="0"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                    value="Eje"
                  >
                    Eje
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                    value="2019-05-26T20:30:56.000Z"
                  >
                    5/26/2019
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                    value="Antalya"
                  >
                    Antalya
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                    value="2019-05-26T20:30:56.000Z"
                  >
                    5/26/2019
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                    value="cheap"
                  >
                    cheap
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="1"
                  level="0"
                  path="1"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                    value="Eje"
                  >
                    Eje
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                    value="2019-05-26T20:30:56.000Z"
                  >
                    5/26/2019
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                    value="Tizi"
                  >
                    Tizi
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                    value="2019-05-26T20:30:56.000Z"
                  >
                    5/26/2019
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                    value="cheap"
                  >
                    cheap
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  index="2"
                  level="0"
                  path="2"
                  style="transition: all ease 300ms;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                    value="Ankara"
                  >
                    Ankara
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                    value="2019-06-27T09:30:56.000Z"
                  >
                    6/27/2019
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                    value="Antalya"
                  >
                    Antalya
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                    value="2019-07-29T14:30:56.000Z"
                  >
                    7/29/2019
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                    style="box-sizing: border-box;"
                    value="business"
                  >
                    business
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                  style="height: 49px;"
                />
                <tr
                  class="MuiTableRow-root"
                  style="height: 49px;"
                />
                <tr
                  class="MuiTableRow-root"
                  style="height: 1px;"
                />
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <table
      class="MuiTable-root"
    >
      <tfoot
        class="MuiTableFooter-root"
        style="display: grid;"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-footer"
        >
          <td
            class="MuiTableCell-root MuiTableCell-footer MuiTablePagination-root Component-paginationRoot-264"
            colspan="3"
            icons="[object Object]"
            style="float: right; overflow-x: auto;"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiTablePagination-toolbar Component-paginationToolbar-265 MuiToolbar-gutters"
            >
              <div
                class="MuiTablePagination-spacer"
              />
              <p
                class="MuiTypography-root MuiTablePagination-caption Component-paginationCaption-266 MuiTypography-body2 MuiTypography-colorInherit"
              >
                Rows per page:
              </p>
              <div
                class="MuiInputBase-root MuiTablePagination-input MuiTablePagination-selectRoot Component-paginationSelectRoot-267"
              >
                <div
                  aria-haspopup="listbox"
                  aria-label="Rows per page:"
                  class="MuiSelect-root MuiSelect-select MuiTablePagination-select MuiSelect-selectMenu MuiInputBase-input"
                  role="button"
                  tabindex="0"
                >
                  <div
                    style="padding: 0px 5px;"
                  >
                    5 rows 
                  </div>
                </div>
                <input
                  type="hidden"
                  value="5"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiTablePagination-selectIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
              <p
                class="MuiTypography-root MuiTablePagination-caption Component-paginationCaption-266 MuiTypography-body2 MuiTypography-colorInherit"
              >
                1-3 of 3
              </p>
              <div
                class="MTablePaginationInner-root-514"
              >
                <span
                  class=""
                  title="First Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root"
                      >
                        first_page
                      </span>
                    </span>
                  </button>
                </span>
                <span
                  class=""
                  title="Previous Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root"
                      >
                        chevron_left
                      </span>
                    </span>
                  </button>
                </span>
                <span
                  class="MuiTypography-root MuiTypography-caption"
                  style="flex: 1; text-align: center; align-self: center; flex-basis: inherit;"
                >
                  1-3 of 3
                </span>
                <span
                  class=""
                  title="Next Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root"
                      >
                        chevron_right
                      </span>
                    </span>
                  </button>
                </span>
                <span
                  class=""
                  title="Last Page"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root"
                      >
                        last_page
                      </span>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
    <div
      style="position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; z-index: 11;"
    >
      <div
        style="display: table; width: 100%; height: 100%; background-color: rgba(255, 255, 255, 0.7);"
      >
        <div
          style="display: table-cell; width: 100%; height: 100%; vertical-align: middle; text-align: center;"
        >
          <div
            class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
            role="progressbar"
            style="width: 40px; height: 40px;"
          >
            <svg
              class="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
